# ma-que-agent

./: .gitignore  AI-Agent.md  LICENSE  README.md
.trae/specs/ai-agent-lib-init/: checklist.md  spec.md  tasks.md
ai_agent/: Cargo.toml
ai_agent/src/: config.rs  core.rs  hooks.rs  lib.rs  llm.rs  mcp.rs  temp.rs  tools.rs
specs/ai-agent-lib/: checklist.md  spec.md  tasks.md
