[package]
name = "ai_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
genai = "0.5.3"
rmcp = { version = "1.3.0", features = ["client", "transport-child-process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["macros"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.10"
